[tool.poetry]
name = "AIquill"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
langchain = "^0.0.123"
uvicorn = "^0.21.1"
pygithub = "^1.58.1"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
